--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 .row-header{
   margin:0px auto;
   padding:0px auto;
+  font-size: larger;
+}
+
+h1{
+  font-weight: bolder;
+  
 }
 
 .row-content {
@@ -18,7 +24,7 @@
 .jumbotron {
   padding:70px 30px 70px 30px;
   margin:0px auto;
-  background: #9575CD ;
+  background: #2b59ff ;
   color:floralwhite;
 }
 
@@ -29,7 +35,7 @@ address{
 }
 
 .navbar-dark {
-  background-color: #1045f1;
+  background-color: #0619c2;
 }
 
 .page-enter{
@@ -52,4 +58,53 @@ address{
   opacity: 0.01;
   transform: translateX(100%);
   transition: all 300ms ease-out;
+}
+/* 
+.overflow{
+  height: 500px;
+  overflow-y: scroll;
+} */
+
+.card.result-card:hover{
+  transform: scale(1.01);
+  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+.card-img-top{
+  width: 100%;
+  height: 30vh;
+  object-fit: scale-down;
+}
+
+.result-container{
+  width: 100%;
+  height: 80vh;
+  overflow-y: scroll;
+}
+
+.card-group{
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+
+.result-card{
+  min-width: 20vw;
+  margin-right: 1vw;
+}
+
+.loading{
+  position: fixed;
+  top: 50%;
+  right: 50%;
+}
+
+#form1{
+  width: 50vw;
+}
+
+.navbar{
+  position: sticky;
+}
+
+.nav{
+  position: sticky;
 }
